fix: add missing imageUrl
