# backend/EmerchAPI/EmerchAPI/Controllers/ProductController.cs
@@ -124,6 +124,7 @@ public class ProductController : ControllerBase
             DiscountAvailable = 10,
             SaleDiscount = false,
             Cost = 300,
+            ImageUrl = "https://cdn.nakodeelee.ru/content/tee/{index}.png",
             ProductContents = new List<ProductContent>()
             {
                 new()
