# backend/swagger.json
@@ -235,6 +235,10 @@
               "$ref": "#/components/schemas/ProductContent"
             },
             "nullable": true
+          },
+          "imageUrl": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
